# coleo

./: .flake8  .travis.yml  README.md  pyproject.toml
.github/workflows/: python-package.yml
coleo/: __init__.py  cli.py  config.py
examples/: guess.py  hello.py  multi.py
scripts/: fix.sh
src/coleo/: __init__.py  cli.py  config.py
tests/: test_cli.py  test_config.py
